kube-manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: service-2048
spec:
  ports:
    - port: 9000
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: game-2048

---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: tetris-service
spec:
  ports:
    - port: 8900
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: game-tetris

---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: homepage-service
spec:
  ports:
    - port: 8800
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: static-page
