kube-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games-ingress
  namespace: staging
  annotations:
    ingressClassName: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vintage-games.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-service
            port:
              number: 8800
      - path: /2048
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 9000
      - path: /tetris
        pathType: Prefix
        backend:
          service:
            name: tetris-service
            port:
              number: 8900
